2022-02-09  Fujii Hironori  <Hironori.Fujii@sony.com>

        compositing/masks/compositing-clip-path-mask-change.html is failing for ports using TextureMapper
        https://bugs.webkit.org/show_bug.cgi?id=236323

        Reviewed by Don Olmstead.

        * platform/gtk/TestExpectations:

2022-02-09  Jon Lee  <jonlee@apple.com>

        Unreviewed gardening.

        Timeout due to turning WebGL on by default on bots. Will be addressed in b234536.
        * platform/ios-wk2/TestExpectations:

2022-02-09  Chris Dumez  <cdumez@apple.com>

        Resync web-platform-tests/html/dom from upstream
        https://bugs.webkit.org/show_bug.cgi?id=236252

        Reviewed by Youenn Fablet.

        * platform/mac-wk2/imported/w3c/web-platform-tests/html/dom/idlharness.https-expected.txt:
        * platform/mac-wk2/imported/w3c/web-platform-tests/html/dom/reflection-misc-expected.txt:

2022-02-09  Ziran Sun  <zsun@igalia.com>

        [Forms] Improving applyStep() to be in line with specs
        https://bugs.webkit.org/show_bug.cgi?id=236134

        Reviewed by Chris Dumez.

        Update test expectations.
        * fast/forms/date/date-stepup-stepdown-expected.txt:
        * fast/forms/date/date-stepup-stepdown.html:
        * fast/forms/datetimelocal/datetimelocal-stepup-stepdown-expected.txt:
        * fast/forms/datetimelocal/datetimelocal-stepup-stepdown.html:
        * fast/forms/month/month-stepup-stepdown-expected.txt:
        * fast/forms/month/month-stepup-stepdown.html:
        * fast/forms/number/number-stepup-stepdown-expected.txt:
        * fast/forms/number/number-stepup-stepdown.html:
        * fast/forms/range/range-stepup-stepdown-expected.txt:
        * fast/forms/range/range-stepup-stepdown.html:
        * fast/forms/time/time-stepup-stepdown-expected.txt:
        * fast/forms/time/time-stepup-stepdown.html:
        * fast/forms/week/week-stepup-stepdown-expected.txt:
        * fast/forms/week/week-stepup-stepdown.html: