@@ -4,7 +4,7 @@
 <TITLE>CSS1 Test Suite: 1.4 Class as selector</TITLE>
 <META http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <META http-equiv="Content-Style-Type" content="text/css">
-<META name="fuzzy" content="maxDifference=0-1; totalPixels=0-1" />
+<META name="fuzzy" content="maxDifference=0-1; totalPixels=0-2">
 <LINK rel="stylesheet" type="text/css" media="screen" href="../resources/base.css">
 <STYLE type="text/css">
 .one {color: green;}
