@@ -6,6 +6,7 @@
         <link rel="match" href="-apple-color-filter-color-text-decorations-expected.html">
 
         <meta name="assert" content="-apple-color-filter affects the color of text decorations">
+        <meta name="fuzzy" content="maxDifference=0-1; totalPixels=0-9206">
         <style type="text/css">
             div.test
             {
