@@ -6,6 +6,7 @@
         <link rel="match" href="-apple-color-filter-text-decoration-shadow-expected.html">
 
         <meta name="assert" content="-apple-color-filter affects text decoration shadows">
+        <meta name="fuzzy" content="maxDifference=0-1; totalPixels=0-9388">
         <style type="text/css">
             .test
             {
