@@ -7,6 +7,7 @@
 <link rel="help" href="https://bugzilla.mozilla.org/show_bug.cgi?id=1656281">
 <link rel="help" href="https://github.com/w3c/csswg-drafts/issues/6286#issuecomment-866986544">
 <link rel="match" href="grid-item-aspect-ratio-stretch-2-ref.html">
+<meta name="fuzzy" content="maxDifference=0-1; totalPixels=0-2">
 <style>
   body {
     line-height: 0;
